# apps/OpenSignServer/public/openapi.json
@@ -1,8 +1,8 @@
 {
   "openapi": "3.0.3",
   "info": {
-    "title": "FibexSign API v1",
-    "description": "This is the API documentation for the FibexSign API v1, based on the OpenAPI 3.1 specification.",
+    "title": "Firma API v1",
+    "description": "This is the API documentation for the Firma API v1, based on the OpenAPI 3.1 specification.",
     "contact": {
       "email": "contacto@fibexsign.com"
     },
@@ -15,7 +15,7 @@
   ],
   "tags": [
     {
-      "name": "FibexSign",
+      "name": "Firma",
       "description": "Electronic signature platform"
     },
     {
